--- a/.gitignore
+++ b/.gitignore
@@ -106,7 +106,6 @@ celerybeat.pid
 .venv
 env/
 venv/
-mlopsvenv/
 ENV/
 env.bak/
 venv.bak/
@@ -128,3 +127,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# AWS Credentials
+.AWS_sanketsonu_keys.csv
